# Labyrinth

./: CMakeLists.txt  LICENSE.md  README.md  generic makefile  labyrinth  makefile  makefile (old)
src/: aux.c  aux.h  auxiliary.c  auxiliary.h  connect.h  gamescene.c  gamescene.h  labyrinth.c  list.c  list.h  main.c  main.h  main.h.in  menu.c  menu.h  stack.h  test.c  transmit.c  transmit.h
src/debug/: labyrinth.c
src/old/: stack.c
src/unix/: connect.c
src/win/: connect.c
